# preprimer

./: .gitignore  .mutmut_config  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEBASE_REVIEW.md  MANIFEST.in  README.md  SECURITY.md  SECURITY_FIXES.md  SECURITY_IMPLEMENTATION_COMPLETE.md  TESTS_CLEANED.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  comprehensive-testing.yml  comprehensive-testing.yml.old  publish.yml.old  release.yml  test.yml  test.yml.old
docs/: README.md  WINDOWS_COMPATIBILITY.md  testing_framework.md  testing_framework_summary.md
docs/api/: python-api.md
docs/developer/: OLIVAR_INTEGRATION.md  TEST_HARMONIZATION.md  architecture.md  ci-cd.md  contributing.md  extending.md  performance.md  pypi-publishing.md  release-checklist.md
docs/development/: COMPREHENSIVE_WORK_SUMMARY.md  DEEP_IMPROVEMENTS_SUMMARY.md  PHASE1_COMPLETION_SUMMARY.md  SECURITY_TEST_IMPROVEMENTS.md  SESSION_ACCOMPLISHMENTS.md  TEST_MIGRATION_GUIDE.md  TEST_REORGANIZATION_PLAN.md
docs/development/migrations/: PARSER_MIGRATION_COMPLETE.md  WRITER_MIGRATION_COMPLETE.md  WRITER_MIGRATION_FINAL.md  WRITER_PATTERN_SESSION.md
docs/development/patterns/: BASEPARSERTEST_PATTERN.md  BASEWRITERTEST_PATTERN.md
docs/technical/: compatibility.md  security.md  testing.md  windows-compatibility.md
docs/technical/validation/: README.md  real-data-testing.md  v0.2.0-validation.md
docs/user-guide/: README.md  basic-usage.md  cli-reference.md  configuration.md  installation.md  quick-start.md  supported-formats.md
examples/: README.md  basic_conversion.py  batch_processing.py  enhanced_config_demo.py  error_handling.py  olivar_demo.py  quality_filtering.py  testing_examples.py  topology_handling.py
preprimer/: __init__.py  __main__.py  align.py  cli.py  convert.py  main.py  utils.py  writers.py
preprimer/alignment/: __init__.py  blast_provider.py  exonerate_provider.py  mepcr_provider.py  merpcr_provider.py  mfeprimer_provider.py  primersearch_provider.py  seqkit_provider.py
preprimer/core/: __init__.py  config.py  converter.py  enhanced_config.py  exceptions.py  interfaces.py  optimized_parser.py  primerscheme_info.py  registry.py  security.py  standardized_parser.py  topology.py
preprimer/parsers/: __init__.py  artic.py  artic_parser.py  olivar_parser.py  primer3_parser.py  sts_parser.py  varvamp.py  varvamp_parser.py  varvamp_parser_optimized.py
preprimer/writers/: __init__.py  artic_writer.py  fasta_writer.py  gff3_writer.py  olivar_writer.py  sts_writer.py  varvamp_writer.py
scripts/: run_mutation_tests.py
tests/: README.md  conftest.py  conftest_legacy.py  test.py  test_alignment.py  test_all_parsers.py  test_artic_parser_comprehensive.py  test_benchmarks.py  test_circular_genome.py  test_cli.py  test_convert.py  test_converter_comprehensive.py  test_converter_comprehensive_gaps.py  test_core_config.py  test_core_interfaces.py  test_data_design.md  test_enhanced_config.py  test_error_handling.py  test_exceptions_comprehensive.py  test_integration.py  test_main_api_comprehensive.py  test_olivar_parser.py  test_olivar_parser_comprehensive.py  test_olivar_writer.py  test_parsers_unified.py  test_primerscheme_info_comprehensive.py  test_property_based.py  test_real_data_comprehensive.py  test_refactored_system.py  test_registry_comprehensive.py  test_registry_performance.py  test_security.py  test_security_comprehensive.py  test_standardized_parser.py  test_sts_parser_comprehensive.py  test_sts_writer_comprehensive.py  test_topology.py  test_topology_comprehensive.py  test_varvamp_parser_comprehensive.py  test_varvamp_writer.py
tests/benchmarks/: test_benchmarks.py  test_registry.py
tests/integration/: test_cli.py  test_converter.py  test_converter_gaps.py  test_integration.py  test_main_api.py  test_production_hardening.py
tests/test_data/: LR722600.1.fasta  README.md
tests/test_data/ASFV_long/: ambiguous_consensus.fasta
tests/test_data/datasets/medium/: artic.scheme.bed  metadata.yaml  olivar.csv  olivar.primer.bed  varvamp.tsv
tests/test_data/datasets/mitochondrial/: artic.scheme.bed  metadata.yaml  olivar.csv  reference.fasta  sts.tsv  varvamp.tsv
tests/test_data/datasets/small/: artic.scheme.bed  metadata.yaml  olivar.csv  reference.fasta  sts.tsv  varvamp.tsv
tests/test_data/fixtures/malformed/: invalid_artic.bed  invalid_varvamp.tsv
tests/test_data/fixtures/minimal/: minimal_artic.bed  minimal_varvamp.tsv
tests/test_data/legacy/: ASFV.sts.tsv
tests/test_data/legacy/ASFV_long/: primers.tsv
tests/test_data/olivar_examples/: olivar-design.primer.bed
tests/unit/: test_g4_formats.py
tests/unit/alignment/: test_alignment.py  test_new_providers.py
tests/unit/core/: test_circular_genome.py  test_config.py  test_error_handling.py  test_exceptions.py  test_interfaces.py  test_primerscheme_info.py  test_property.py  test_registry.py  test_security.py  test_security_extra.py  test_security_working.py  test_standardized_parser.py
tests/unit/parsers/: test_artic_6col.py  test_artic_infojson.py  test_artic_parser.py  test_base_parser.py  test_olivar_parser.py  test_parser_edge_cases.py  test_sts_parser.py  test_varvamp_parser.py
tests/unit/writers/: test_artic_writer.py  test_base_writer.py  test_fasta_writer.py  test_olivar_writer.py  test_olivar_writer_extra.py  test_sts_writer.py  test_varvamp_writer.py
tests/utils/: assertions.py  builders.py  factories.py
tests/validation/: README.md  __init__.py  report_generator.py  test_real_data.py  validator.py
